@@ -50,6 +50,6 @@ This release would not have looked like this without help, code, reports and
 advice from friends like these:
 
  Song Ma, Dan Fandrich, Yang Tse, Jay Austin, Robert Iakobashvil,
- James Housley, Daniel Black, Steve Little
+ James Housley, Daniel Black, Steve Little, Sonia Subramanian
 
         Thanks! (and sorry if I forgot to mention someone)
